--- a/chamber/styles/join-small.css
+++ b/chamber/styles/join-small.css
@@ -16,7 +16,7 @@
         box-sizing: border-box;
     }
 
-    *:not(.navigation) {
+    main > *{
         opacity: 0;
         transform: translateY(20px);
         animation: fadeStack 0.5s ease forwards;
@@ -25,16 +25,19 @@
 
     @keyframes fadeStack {
         to {
-            opacity: 1;
-            transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
         }
     }
 
     body {
         background-color: var(--body-col);
+    }
+
+    main {
+        display: block;
         width: 100%;
         margin: 0 auto;
-        text-align: left;
     }
 
     h1,
@@ -47,7 +50,7 @@
     p,
     span,
     legend,
-    label,
+    label, 
     input,
     button {
         font-family: var(--p-font);
@@ -66,6 +69,7 @@
     header h2,
     header h3 {
         color: var(--white-col);
+        
     }
 
     section {
@@ -148,7 +152,7 @@
         margin: 0 0 20px 0;
     }
 
-    main > h1 {
+    main > h1{
         padding-left: 1rem;
     }
 
@@ -162,43 +166,45 @@
         text-align: center;
     }
 
+
     form {
+        display: block;
         padding: 1rem;
         background: var(--navy-blue);
         border-radius: 8px;
+        max-width: 100%;
     }
 
-    form input,
-    select {
-        display: block;
+    input,
+    select, 
+    textarea{
+        color: var(--text-col);
+        box-sizing: border-box;
         height: 44px;
         margin: 0 0 20px;
         border: none;
         border-radius: 6px;
         width: 100%;
-    }
-
-    input,
-    select,
-    textarea {
-        color: var(--text-col);
+        max-width: 100%;
     }
 
     textarea {
+        display: block;
         width: 100%;
         height: 100px;
         display: block;
         margin: 0 0 20px;
         border: none;
         border-radius: 6px;
+
     }
 
-    input[required] {
+    input[required]{
         border-left: solid 5px red;
     }
 
     #organizationTitle,
-    textarea:nth-of-type(1) {
+    textarea:nth-of-type(1){
         border-left: solid 5px var(--text-col);
     }
 
@@ -211,16 +217,20 @@
         background: var(--white-col);
     }
 
+
+    /*----------- Javascript injection here ----------------*/
+
     #membershipInfo {
         padding: 1rem;
     }
 
-    #membershipInfo::backdrop {
-        background: rgba(0, 0, 0, 0.4);
+    #membershipInfo::backdrop{
+        background: rgba(0, 0, 0, 0.4); 
         backdrop-filter: blur(3px);
     }
 
-    #membershipInfo button {
+
+    #membershipInfo button{
         padding: .5rem;
         width: 100px;
         border-radius: 6px;
@@ -229,11 +239,12 @@
         color: var(--white-col);
     }
 
-    .membersLevels {
+    .membersLevels{
         background: var(--navy-blue);
         padding: 1rem;
         margin: 30px 0;
     }
+
 
     .membersLevels button {
         display: block;
@@ -261,7 +272,9 @@
         color: var(--white-col);
     }
 
-    .footer-info {
+    .footer-info
+    {
         margin: 30px 0;
     }
+
 }
